// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Flex Flex 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 gXOmnU"
  >
    <div
      class="Box-xda4ls-0 Flex-hrfu3s-0 iHUNrd"
      style="box-sizing:content-box;padding:24px;background:#f0f2f5;min-height:400px"
    >
      <div
        class="Box-xda4ls-0 hQvIAg"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        1
      </div>
      <div
        class="Box-xda4ls-0 hQvIAg"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        2
      </div>
      <div
        class="Box-xda4ls-0 hQvIAg"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        3
      </div>
      <div
        class="Box-xda4ls-0 hQvIAg"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        4
      </div>
      <div
        class="Box-xda4ls-0 hQvIAg"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        5
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Flex IE11 minHeight solution 1 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 gXOmnU"
  >
    <div
      class="Box-xda4ls-0 Flex-hrfu3s-0 hWMBMD"
      height="400px"
      style="box-sizing:content-box;padding:24px;background:#f0f2f5"
    >
      <div
        class="Box-xda4ls-0 hQvIAg"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        1
      </div>
      <div
        class="Box-xda4ls-0 hQvIAg"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        2
      </div>
      <div
        class="Box-xda4ls-0 hQvIAg"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        3
      </div>
      <div
        class="Box-xda4ls-0 hQvIAg"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        4
      </div>
      <div
        class="Box-xda4ls-0 hQvIAg"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        5
      </div>
    </div>
    <p
      class="Text-sc-1wu7vpu-0 RbfMK"
      color="currentColor"
      font-size="medium"
    >
      This solution involves using height instead min-height.
    </p>
  </div>
</div>
`;

exports[`Storyshots Flex IE11 minHeight solution 2 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 gXOmnU"
  >
    <div
      class="Box-xda4ls-0 Flex-hrfu3s-0 eeiLmV"
    >
      <div
        class="Box-xda4ls-0 Flex-hrfu3s-0 iHUNrd"
        style="box-sizing:content-box;padding:24px;background:#f0f2f5;min-height:400px"
      >
        <div
          class="Box-xda4ls-0 hQvIAg"
          style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
        >
          1
        </div>
        <div
          class="Box-xda4ls-0 hQvIAg"
          style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
        >
          2
        </div>
        <div
          class="Box-xda4ls-0 hQvIAg"
          style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
        >
          3
        </div>
        <div
          class="Box-xda4ls-0 hQvIAg"
          style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
        >
          4
        </div>
        <div
          class="Box-xda4ls-0 hQvIAg"
          style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
        >
          5
        </div>
      </div>
    </div>
    <p
      class="Text-sc-1wu7vpu-0 RbfMK"
      color="currentColor"
      font-size="medium"
    >
      This solution involves wrapping Flex element with another Flex element with column direction..
    </p>
  </div>
</div>
`;

exports[`Storyshots Flex With custom order 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 gXOmnU"
  >
    <div
      class="Box-xda4ls-0 Flex-hrfu3s-0 iHUNrd"
      style="box-sizing:content-box;padding:24px;background:#f0f2f5;min-height:400px"
    >
      <div
        class="Box-xda4ls-0 jUylnC"
        order="1"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        1
      </div>
      <div
        class="Box-xda4ls-0 iTYGfU"
        order="3"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        2
      </div>
      <div
        class="Box-xda4ls-0 lhVZUl"
        order="2"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        3
      </div>
      <div
        class="Box-xda4ls-0 jQbPzq"
        order="5"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        4
      </div>
      <div
        class="Box-xda4ls-0 lbouMD"
        order="4"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        5
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Flex alignItems set to center 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 gXOmnU"
  >
    <div
      class="Box-xda4ls-0 Flex-hrfu3s-0 geyRYt"
      style="box-sizing:content-box;padding:24px;background:#f0f2f5;min-height:400px"
    >
      <div
        class="Box-xda4ls-0 hQvIAg"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        1
      </div>
      <div
        class="Box-xda4ls-0 hQvIAg"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        2
      </div>
      <div
        class="Box-xda4ls-0 hQvIAg"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        3
      </div>
      <div
        class="Box-xda4ls-0 hQvIAg"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        4
      </div>
      <div
        class="Box-xda4ls-0 hQvIAg"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        5
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Flex alignItems set to flex-end 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 gXOmnU"
  >
    <div
      class="Box-xda4ls-0 Flex-hrfu3s-0 cPBChj"
      style="box-sizing:content-box;padding:24px;background:#f0f2f5;min-height:400px"
    >
      <div
        class="Box-xda4ls-0 hQvIAg"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        1
      </div>
      <div
        class="Box-xda4ls-0 hQvIAg"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        2
      </div>
      <div
        class="Box-xda4ls-0 hQvIAg"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        3
      </div>
      <div
        class="Box-xda4ls-0 hQvIAg"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        4
      </div>
      <div
        class="Box-xda4ls-0 hQvIAg"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        5
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Flex alignItems set to flex-start 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 gXOmnU"
  >
    <div
      class="Box-xda4ls-0 Flex-hrfu3s-0 fbOeeQ"
      style="box-sizing:content-box;padding:24px;background:#f0f2f5;min-height:400px"
    >
      <div
        class="Box-xda4ls-0 hQvIAg"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        1
      </div>
      <div
        class="Box-xda4ls-0 hQvIAg"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        2
      </div>
      <div
        class="Box-xda4ls-0 hQvIAg"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        3
      </div>
      <div
        class="Box-xda4ls-0 hQvIAg"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        4
      </div>
      <div
        class="Box-xda4ls-0 hQvIAg"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        5
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Flex alignItems set to stretch (default) 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 gXOmnU"
  >
    <div
      class="Box-xda4ls-0 Flex-hrfu3s-0 fMZgiV"
      style="box-sizing:content-box;padding:24px;background:#f0f2f5;min-height:400px"
    >
      <div
        class="Box-xda4ls-0 hQvIAg"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        1
      </div>
      <div
        class="Box-xda4ls-0 hQvIAg"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        2
      </div>
      <div
        class="Box-xda4ls-0 hQvIAg"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        3
      </div>
      <div
        class="Box-xda4ls-0 hQvIAg"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        4
      </div>
      <div
        class="Box-xda4ls-0 hQvIAg"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        5
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Flex flexDirection set to column 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 gXOmnU"
  >
    <div
      class="Box-xda4ls-0 Flex-hrfu3s-0 eeiLmV"
      style="box-sizing:content-box;padding:24px;background:#f0f2f5;min-height:400px"
    >
      <div
        class="Box-xda4ls-0 hQvIAg"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        1
      </div>
      <div
        class="Box-xda4ls-0 hQvIAg"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        2
      </div>
      <div
        class="Box-xda4ls-0 hQvIAg"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        3
      </div>
      <div
        class="Box-xda4ls-0 hQvIAg"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        4
      </div>
      <div
        class="Box-xda4ls-0 hQvIAg"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        5
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Flex flexDirection set to column-reverse 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 gXOmnU"
  >
    <div
      class="Box-xda4ls-0 Flex-hrfu3s-0 jIvELE"
      style="box-sizing:content-box;padding:24px;background:#f0f2f5;min-height:400px"
    >
      <div
        class="Box-xda4ls-0 hQvIAg"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        1
      </div>
      <div
        class="Box-xda4ls-0 hQvIAg"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        2
      </div>
      <div
        class="Box-xda4ls-0 hQvIAg"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        3
      </div>
      <div
        class="Box-xda4ls-0 hQvIAg"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        4
      </div>
      <div
        class="Box-xda4ls-0 hQvIAg"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        5
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Flex flexDirection set to row-reverse 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 gXOmnU"
  >
    <div
      class="Box-xda4ls-0 Flex-hrfu3s-0 YzlTQ"
      style="box-sizing:content-box;padding:24px;background:#f0f2f5;min-height:400px"
    >
      <div
        class="Box-xda4ls-0 hQvIAg"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        1
      </div>
      <div
        class="Box-xda4ls-0 hQvIAg"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        2
      </div>
      <div
        class="Box-xda4ls-0 hQvIAg"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        3
      </div>
      <div
        class="Box-xda4ls-0 hQvIAg"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        4
      </div>
      <div
        class="Box-xda4ls-0 hQvIAg"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        5
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Flex flexWrap set to no-wrap (default) 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 gXOmnU"
  >
    <div
      class="Box-xda4ls-0 hINIvq"
      width="500"
    >
      <div
        class="Box-xda4ls-0 Flex-hrfu3s-0 cJTmbP"
        style="box-sizing:content-box;padding:24px;background:#f0f2f5;min-height:400px"
      >
        <div
          class="Box-xda4ls-0 hQvIAg"
          style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
        >
          1
        </div>
        <div
          class="Box-xda4ls-0 hQvIAg"
          style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
        >
          2
        </div>
        <div
          class="Box-xda4ls-0 hQvIAg"
          style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
        >
          3
        </div>
        <div
          class="Box-xda4ls-0 hQvIAg"
          style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
        >
          4
        </div>
        <div
          class="Box-xda4ls-0 hQvIAg"
          style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
        >
          5
        </div>
        <div
          class="Box-xda4ls-0 hQvIAg"
          style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
        >
          6
        </div>
        <div
          class="Box-xda4ls-0 hQvIAg"
          style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
        >
          7
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Flex flexWrap set to wrap 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 gXOmnU"
  >
    <div
      class="Box-xda4ls-0 hINIvq"
      width="500"
    >
      <div
        class="Box-xda4ls-0 Flex-hrfu3s-0 kKfTwu"
        style="box-sizing:content-box;padding:24px;background:#f0f2f5;min-height:400px"
      >
        <div
          class="Box-xda4ls-0 hQvIAg"
          style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
        >
          1
        </div>
        <div
          class="Box-xda4ls-0 hQvIAg"
          style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
        >
          2
        </div>
        <div
          class="Box-xda4ls-0 hQvIAg"
          style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
        >
          3
        </div>
        <div
          class="Box-xda4ls-0 hQvIAg"
          style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
        >
          4
        </div>
        <div
          class="Box-xda4ls-0 hQvIAg"
          style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
        >
          5
        </div>
        <div
          class="Box-xda4ls-0 hQvIAg"
          style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
        >
          6
        </div>
        <div
          class="Box-xda4ls-0 hQvIAg"
          style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
        >
          7
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Flex flexWrap set to wrap-reverse 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 gXOmnU"
  >
    <div
      class="Box-xda4ls-0 hINIvq"
      width="500"
    >
      <div
        class="Box-xda4ls-0 Flex-hrfu3s-0 fbhWTT"
        style="box-sizing:content-box;padding:24px;background:#f0f2f5;min-height:400px"
      >
        <div
          class="Box-xda4ls-0 hQvIAg"
          style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
        >
          1
        </div>
        <div
          class="Box-xda4ls-0 hQvIAg"
          style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
        >
          2
        </div>
        <div
          class="Box-xda4ls-0 hQvIAg"
          style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
        >
          3
        </div>
        <div
          class="Box-xda4ls-0 hQvIAg"
          style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
        >
          4
        </div>
        <div
          class="Box-xda4ls-0 hQvIAg"
          style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
        >
          5
        </div>
        <div
          class="Box-xda4ls-0 hQvIAg"
          style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
        >
          6
        </div>
        <div
          class="Box-xda4ls-0 hQvIAg"
          style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
        >
          7
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Flex justifyContent set to center 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 gXOmnU"
  >
    <div
      class="Box-xda4ls-0 Flex-hrfu3s-0 iIgIah"
      style="box-sizing:content-box;padding:24px;background:#f0f2f5;min-height:400px"
    >
      <div
        class="Box-xda4ls-0 hQvIAg"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        1
      </div>
      <div
        class="Box-xda4ls-0 hQvIAg"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        2
      </div>
      <div
        class="Box-xda4ls-0 hQvIAg"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        3
      </div>
      <div
        class="Box-xda4ls-0 hQvIAg"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        4
      </div>
      <div
        class="Box-xda4ls-0 hQvIAg"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        5
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Flex justifyContent set to flex-end 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 gXOmnU"
  >
    <div
      class="Box-xda4ls-0 Flex-hrfu3s-0 dTSZwr"
      style="box-sizing:content-box;padding:24px;background:#f0f2f5;min-height:400px"
    >
      <div
        class="Box-xda4ls-0 hQvIAg"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        1
      </div>
      <div
        class="Box-xda4ls-0 hQvIAg"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        2
      </div>
      <div
        class="Box-xda4ls-0 hQvIAg"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        3
      </div>
      <div
        class="Box-xda4ls-0 hQvIAg"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        4
      </div>
      <div
        class="Box-xda4ls-0 hQvIAg"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        5
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Flex justifyContent set to flex-start (default) 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 gXOmnU"
  >
    <div
      class="Box-xda4ls-0 Flex-hrfu3s-0 dDCzDc"
      style="box-sizing:content-box;padding:24px;background:#f0f2f5;min-height:400px"
    >
      <div
        class="Box-xda4ls-0 hQvIAg"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        1
      </div>
      <div
        class="Box-xda4ls-0 hQvIAg"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        2
      </div>
      <div
        class="Box-xda4ls-0 hQvIAg"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        3
      </div>
      <div
        class="Box-xda4ls-0 hQvIAg"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        4
      </div>
      <div
        class="Box-xda4ls-0 hQvIAg"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        5
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Flex justifyContent set to space-around 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 gXOmnU"
  >
    <div
      class="Box-xda4ls-0 Flex-hrfu3s-0 iCANLs"
      style="box-sizing:content-box;padding:24px;background:#f0f2f5;min-height:400px"
    >
      <div
        class="Box-xda4ls-0 hQvIAg"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        1
      </div>
      <div
        class="Box-xda4ls-0 hQvIAg"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        2
      </div>
      <div
        class="Box-xda4ls-0 hQvIAg"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        3
      </div>
      <div
        class="Box-xda4ls-0 hQvIAg"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        4
      </div>
      <div
        class="Box-xda4ls-0 hQvIAg"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        5
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Flex justifyContent set to space-between 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 gXOmnU"
  >
    <div
      class="Box-xda4ls-0 Flex-hrfu3s-0 hBnJSV"
      style="box-sizing:content-box;padding:24px;background:#f0f2f5;min-height:400px"
    >
      <div
        class="Box-xda4ls-0 hQvIAg"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        1
      </div>
      <div
        class="Box-xda4ls-0 hQvIAg"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        2
      </div>
      <div
        class="Box-xda4ls-0 hQvIAg"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        3
      </div>
      <div
        class="Box-xda4ls-0 hQvIAg"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        4
      </div>
      <div
        class="Box-xda4ls-0 hQvIAg"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        5
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Flex justifyContent set to space-evenly 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 gXOmnU"
  >
    <div
      class="Box-xda4ls-0 Flex-hrfu3s-0 hVgYgW"
      style="box-sizing:content-box;padding:24px;background:#f0f2f5;min-height:400px"
    >
      <div
        class="Box-xda4ls-0 hQvIAg"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        1
      </div>
      <div
        class="Box-xda4ls-0 hQvIAg"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        2
      </div>
      <div
        class="Box-xda4ls-0 hQvIAg"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        3
      </div>
      <div
        class="Box-xda4ls-0 hQvIAg"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        4
      </div>
      <div
        class="Box-xda4ls-0 hQvIAg"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        5
      </div>
    </div>
  </div>
</div>
`;
